--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,11 @@ jobs:
           dotnet-version: 8.0.x
 
       - name: Restore dependencies
-        run: dotnet restore AvaloniaTemplateBlueprint.sln
+        run: dotnet restore TemplateBlueprint.sln
 
       - name: Build
-        run: dotnet build AvaloniaTemplateBlueprint.sln --no-restore -c Release
+        run: dotnet build TemplateBlueprint.sln --no-restore -c Release
 
       - name: Test
-        run: dotnet test AvaloniaTemplateBlueprint.sln --no-build -c Release --verbosity normal
+        run: dotnet test TemplateBlueprint.sln --no-build -c Release --verbosity normal
         continue-on-error: true  # No tests yet
